tests/ui/attributes/key-value-non-ascii.stderr
error: non-ASCII character in byte literal
  --> $DIR/key-value-non-ascii.rs:3:19
   |
LL | #[rustc_dummy = b'ﬃ']
   |                   ^
   |                   |
   |                   must be ASCII
   |                   this multibyte character does not fit into a single byte

error: aborting due to 1 previous error

